--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,7 +155,11 @@ jobs:
       with:
         python-version: '3.12'
         architecture: 'x64'
-        cache: 'pip'
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        enable-cache: true
+        cache-dependency-glob: "**/pyproject.toml"
     - name: Download webpack build
       uses: actions/download-artifact@v4
       with:
@@ -163,22 +167,20 @@ jobs:
         path: hawc
     - name: install hawc
       run: |
-        python -m pip install -U pip wheel
-        python -m pip install -e ".[dev,docs]"
-        python -m pip install -e client
-        playwright install --with-deps chromium
+        uv sync --all-extras --python-preference=only-system --link-mode=copy
+        uv run playwright install --with-deps chromium
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
     - name: run integration tests
       id: test
       continue-on-error: true
       run: |
-        py.test -sv tests/integration/
+        uv run py.test -sv tests/integration/
     - name: run integration tests (retry)
       if: steps.test.outcome=='failure'
       id: retry
       continue-on-error: true
       run: |
-        py.test -sv --lf tests/integration/
+        uv run py.test -sv --lf tests/integration/
     - name: set status
       if: always()
       run: |
