--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
   "inflection==0.5.1",
   "pyyaml==6.0.1",
   "gunicorn==22.0.0",
-  "wagtail~=6.1.3",
+  "wagtail==6.3",
   "wagtail-draftail-anchors==0.6.0",
   # tasks
   "celery==5.4.0",
