--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
         fi
         coverage run -m pytest --record-mode=none
         echo "# Python coverage report" >> $GITHUB_STEP_SUMMARY
-        coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
+        coverage report --format=markdown -i >> $GITHUB_STEP_SUMMARY || true
         coverage html -d coverage -i
     - name: loc
       run: |
