--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ dev = [
   "pytest==8.2.2",
   "pytest-django==4.8.0",
   "vcrpy==6.0.1",
+  "urllib3<2.3.0", # TODO - remove when fixed; https://github.com/kevin1024/vcrpy/issues/888
   "pytest-recording==0.13.1",
   "playwright==1.44.0",
   "pytest-playwright==0.5.0",
