update ruff version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ dev = [
   # build
   "flit==3.10.1",
   # lint and formatting tools
-  "ruff==0.4.9",  # make sure to sync w/ pre-commit
+  "ruff==0.8.6",  # make sure to sync w/ pre-commit
   "djhtml==3.0.7",  # make sure to sync w/ pre-commit
   "pre-commit==4.0.1",
   # django development
@@ -151,6 +151,7 @@ known-first-party = ["hawc", "hawc_client"]
 [tool.ruff.lint.per-file-ignores]
 "test_*.py" = ["S101", "S106"]
 "scripts/*.py" = ["T201"]
+"scripts/*.ipynb" = ["T201"]
 "**/management/**.py" = ["T201"]
 "**/migrations/**.py" = ["T201"]
 
