--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,20 +20,20 @@ requires-python = ">=3.12"
 dependencies = [
   # web application
   "Django~=5.1.4",
-  "django-crispy-forms==2.2",
-  "crispy-bootstrap4==2024.1",
-  "django-filter==24.2",
+  "django-crispy-forms==2.3",
+  "crispy-bootstrap4==2024.10",
+  "django-filter==24.3",
   "django-redis==5.4.0",
-  "django-reversion==5.0.12",
+  "django-reversion==5.1.0",
   "django-autocomplete-light==3.11.0",
-  "django-taggit==5.0.1",
+  "django-taggit==6.1.0",
   "django-treebeard==4.7.1",
   "djangorestframework==3.15.2",
-  "django-webpack-loader==3.1.0",
+  "django-webpack-loader==3.1.1",
   "uritemplate==4.1.1",
   "inflection==0.5.1",
-  "pyyaml==6.0.1",
-  "gunicorn==22.0.0",
+  "pyyaml==6.0.2",
+  "gunicorn==23.0.0",
   "wagtail~=6.3.1",
   "wagtail-draftail-anchors==0.6.0",
   # tasks
@@ -41,21 +41,21 @@ dependencies = [
   "billiard==4.2.0",
   "kombu==5.3.7",
   # utilities
-  "jsonschema==4.22.0",
-  "lxml==5.2.2",
-  "psycopg2-binary==2.9.9",
-  "redis==5.0.6",
+  "jsonschema==4.23.0",
+  "lxml==5.3.0",
+  "psycopg2-binary==2.9.10",
+  "redis==5.2.1",
   "requests==2.32.3",
-  "pydantic==2.7.4",
-  "nh3==0.2.17",
-  "tinycss2==1.3.0",
+  "pydantic==2.10.4",
+  "nh3==0.2.20",
+  "tinycss2==1.4.0",
   # computational
-  "numpy==1.26.4",
-  "pandas==2.2.2",
-  "openpyxl==3.1.4",
+  "numpy==2.2.1",
+  "pandas==2.2.3",
+  "openpyxl==3.1.5",
   "jinja2==3.1.5",
-  "plotly==5.22.0",
-  "scipy==1.13.1",
+  "plotly==5.24.1",
+  "scipy==1.15.0",
   "bmds==23.4",
   # exports
   "rispy==0.9.0",
@@ -65,32 +65,31 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   # build
-  "flit==3.9.0",
+  "flit==3.10.1",
   # lint and formatting tools
-  "ruff==0.4.9",
-  "djhtml==3.0.6",
-  "pre-commit==3.7.1",
+  "ruff==0.8.6",  # make sure to sync w/ pre-commit
+  "djhtml==3.0.7",  # make sure to sync w/ pre-commit
+  "pre-commit==4.0.1",
   # django development
-  "django-debug-toolbar==4.4.2",
-  "django-browser-reload==1.12.1",
+  "django-debug-toolbar==4.4.6",
+  "django-browser-reload==1.17.0",
   "django-extensions==3.2.3",
-  "faker==25.8.0",
+  "faker==33.3.0",
   # tests
-  "coverage==7.5.3",
-  "pytest==8.2.2",
-  "pytest-django==4.8.0",
-  "vcrpy==6.0.1",
-  "urllib3<2.3.0", # TODO - remove when fixed; https://github.com/kevin1024/vcrpy/issues/888
-  "pytest-recording==0.13.1",
-  "playwright==1.44.0",
-  "pytest-playwright==0.5.0",
+  "coverage==7.6.10",
+  "pytest==8.3.4",
+  "pytest-django==4.9.0",
+  "vcrpy==7.0.0",
+  "pytest-recording==0.13.2",
+  "playwright==1.49.1",
+  "pytest-playwright==0.6.2",
 ]
 docs = [
-  "mkdocs-material==9.5.27",
+  "mkdocs-material==9.5.49",
 ]
 prod = [
-  "django-anymail==10.3",
-  "sentry_sdk==2.5.1",
+  "django-anymail==12.0",
+  "sentry_sdk==2.19.2",
 ]
 
 [project.scripts]
@@ -152,6 +151,7 @@ known-first-party = ["hawc", "hawc_client"]
 [tool.ruff.lint.per-file-ignores]
 "test_*.py" = ["S101", "S106"]
 "scripts/*.py" = ["T201"]
+"scripts/*.ipynb" = ["T201"]
 "**/management/**.py" = ["T201"]
 "**/migrations/**.py" = ["T201"]
 
