--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dependencies = [
   "jinja2==3.1.5",
   "plotly==5.24.1",
   "scipy==1.15.0",
-  "bmds==23.4",
+  "pybmds==24.1",
   # exports
   "rispy==0.9.0",
   "python-docx==1.1.2",
@@ -117,7 +117,7 @@ omit = [
 ]
 
 [tool.coverage.report]
-fail_under=91.8
+fail_under=92.0
 precision=1
 
 [tool.flit.sdist]
