ICF bioassay v2 add study level values (#1081)
* added study level value schema and migration

* added admin view and sample fixture value

* added CRUDL operations

* added animalv2 htmx and views unit tests

* updated table display and test case for update

* fix htmx_alert

* htmx updates

* update test

* update lists

* show values on study detail page

* few more comments from final review

* fix new test

---------

Co-authored-by: Berkowitz <55586@icf.com>
Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>
Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/tests/data/fixtures/db.yaml
+++ b/tests/data/fixtures/db.yaml
@@ -4744,6 +4744,17 @@
     significant: false
     significance_level: null
     treatment_effect: null
+- model: animalv2.StudyLevelValue
+  pk: 1
+  fields:
+    study: 7
+    system: Cardiovascular
+    value_type: 1
+    value: 10
+    units: 1
+    comments: a comment
+    created: 2024-08-09 08:05:06.595126-04
+    last_updated: 2024-08-09 08:05:06.595126-04
 - model: animal.endpointgroup
   pk: 34
   fields:
