--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
 
   integration:
     name: integration
-    needs: [backend, frontend]
+    needs: [frontend]
     runs-on: ubuntu-22.04
 
     services:
@@ -143,9 +143,8 @@ jobs:
         python-version: '3.12'
         architecture: 'x64'
     - name: Install uv
-      uses: astral-sh/setup-uv@v3
+      uses: astral-sh/setup-uv@v5
       with:
-        enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
     - name: Download webpack build
       uses: actions/download-artifact@v4
