--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,6 @@
 name: publish
 
 on:
-  pull_request: # TODO - remove after it works
   push:
     tags:
       - "hawc-client-[0-9]+.[0-9]+"
@@ -37,13 +36,13 @@ jobs:
           uv pip install --system -e client
       - name: Build client
         run: cd client && poe build
-      # - name: Publish package to PyPI
-      #   env:
-      #     PUBLISH_PYPI: ${{ secrets.PUBLISH_PYPI }}
-      #   if: env.PUBLISH_PYPI != null
-      #   uses: pypa/gh-action-pypi-publish@release/v1
-      #   with:
-      #     verbose: true
-      #     attestations: true
-      #     print-hash: true
-      #     packages-dir: client/dist/
+      - name: Publish package to PyPI
+        env:
+          PUBLISH_PYPI: ${{ secrets.PUBLISH_PYPI }}
+        if: env.PUBLISH_PYPI != null
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
+          attestations: true
+          print-hash: true
+          packages-dir: client/dist/
