--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,21 +98,9 @@ jobs:
     - name: test
       run: |
         yarn --cwd ./frontend run test
-    - name: build for integration tests
-      run: |
-        yarn --cwd ./frontend run build
-    - name: Upload webpack build
-      uses: actions/upload-artifact@v4
-      with:
-        name: webpack
-        path: |
-          hawc/webpack-stats.json
-          hawc/static/bundles/
-        retention-days: 1
 
   integration:
     name: integration
-    needs: [frontend]
     runs-on: ubuntu-22.04
 
     services:
@@ -142,32 +130,38 @@ jobs:
       with:
         python-version: '3.12'
         architecture: 'x64'
-    - name: Install uv
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 22
+        cache: 'yarn'
+        cache-dependency-path: 'frontend/yarn.lock'
+    - name: Install JS
+      run: |
+        yarn --cwd ./frontend install --frozen-lockfile
+    - name: Build JS
+      run: |
+        yarn --cwd ./frontend run build
+    - name: Install UV
       uses: astral-sh/setup-uv@v5
       with:
         cache-dependency-glob: "**/pyproject.toml"
-    - name: Download webpack build
-      uses: actions/download-artifact@v4
-      with:
-        name: webpack
-        path: hawc
-    - name: install hawc
+    - name: Install Python
       run: |
         uv sync --all-extras --python-preference=only-system
         uv run playwright install --with-deps chromium
     # https://github.community/t/how-to-retry-a-failed-step-in-github-actions-workflow/125880
-    - name: run integration tests
+    - name: Run integration tests
       id: test
       continue-on-error: true
       run: |
         uv run py.test -sv tests/integration/
-    - name: run integration tests (retry)
+    - name: Run integration tests (retry)
       if: steps.test.outcome=='failure'
       id: retry
       continue-on-error: true
       run: |
         uv run py.test -sv --lf tests/integration/
-    - name: set status
+    - name: Set status
       if: always()
       run: |
         if ${{ steps.test.outcome=='success' || steps.retry.outcome=='success' }}; then
